# deriv-ai-sprint-feb-2026

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
.planning/: PROJECT.md  ROADMAP.md
backend/: __init__.py  db.py  main.py
docs/: ADVERSARIAL_PANEL_REPORT.md  AML_TM_VALIDATION.md  ARCHITECTURE.mmd  BUSINESS_CASE.md  DEMO_HOSTING_GUIDE.md  DEMO_SCRIPT.md  DESIGN_DECISIONS.md  DOCS_CHANGELOG.md  EMBEDDING_RESEARCH.md  FEASIBILITY_REPORT.md  FINANCIAL_DOMAIN_EVALUATION.md  INDEX.md  INFOGRAPHIC_PROMPT.md  PITCH_TRANSCRIPT.md  PRE_DEMO_AUDIT.md  SCHEMA_CHANGES.md  SYSTEM_STATS.md  text_vs_general_embedding_tricks_analysis.md
models/: metrics_v0.1.0.json  metrics_v0.2.0.json  metrics_v0.3.0.json  metrics_v0.4.0.json  metrics_v0.5.0.json
patterns/: __init__.py  features.py  miner.py
reports/: QA_FINAL_VERDICT.md  algorithm_verdicts.md  qa_api_test_report.md  qa_claims_verification.md  qa_demo_schema_report.md  qa_final_verdict.md  qa_ml_pipeline_report.md  qa_red_team_report.md  qa_ui_classic_report.md  qa_verification.md  ui_clickthrough_report.md  ui_retest_report.md  ui_retest_v2_report.md
risk/: __init__.py  explainer.py  guardian.py  scorer.py  trainer.py
schemas/: analyst_label.schema.json  case.schema.json  metric_snapshot.schema.json  pattern_card.schema.json  risk_result.schema.json  transaction.schema.json
scripts/: bootstrap_model.py  demo.py  demo.sh  init_db.py  seed_demo.py  validate_schemas.py
sim/: __init__.py  adversarial.py  main.py
ui/: app.py  (+1 more)
(+11 files in other folders)
